@@ -96,16 +96,6 @@ class DatabasePostgreSQL(Database):
             "WHEN OTHERS THEN r_float = 0.0;\n" \
             "END;\n" \
             "$$")
-        self.execute_dbupdate(\
-            "CREATE OR REPLACE FUNCTION asm_decode_html(p_in TEXT, OUT p_out TEXT)\n" \
-            "LANGUAGE plpgsql\n" \
-            "AS $$\n" \
-            "BEGIN\n" \
-            "p_out = (xpath('/z/text()', ('<z>' || p_in || '</z>')::xml))[1];\n" \
-            "EXCEPTION\n" \
-            "WHEN OTHERS THEN p_out = p_in;\n" \
-            "END;\n" \
-            "$$")
 
     def sql_cast(self, expr, newtype):
         """ Writes a database independent cast for expr to newtype """
@@ -114,6 +104,9 @@ class DatabasePostgreSQL(Database):
     def sql_char_length(self, item):
         """ Writes a char length """
         return "char_length(%s)" % item
+
+    def sql_decode_html(self, expr):
+        return "(xpath('/z/text()', ('<z>' || %s || '</z>')::xml))[1]" % expr
 
     def sql_regexp_replace(self, fieldexpr, pattern="?", replacestr="?"):
         """ Writes a regexp replace expression that replaces characters matching pattern with replacestr """
