@@ -33,6 +33,10 @@ import test_dbfs
 suitedbfs = unittest.makeSuite(test_dbfs.TestDBFS, 'test')
 fullsuite.append(suitedbfs)
 
+import test_dbupdate
+suitedbupdate = unittest.makeSuite(test_dbupdate.TestDBUpdate, 'test')
+fullsuite.append(suitedbupdate)
+
 import test_diary
 suitediary = unittest.makeSuite(test_diary.TestDiary, 'test')
 fullsuite.append(suitediary)
@@ -130,7 +134,7 @@ if __name__ == "__main__":
     import asm3.dbupdate
     asm3.dbupdate.install(base.get_dbo())
     s = unittest.TestSuite(fullsuite)
-    #s = unittest.TestSuite([suiteutils]) # How to run a single suite of tests
+    #s = unittest.TestSuite([suitedbupdate]) # How to run a single suite of tests
     runner = unittest.TextTestRunner()
     runner.run(s)
 
