@@ -1,6 +1,7 @@
 45
 ================
 
+30/08/21 Support for translating db html entities #1038
 29/08/21 Remove cruft and support for python 2 #1037
 29/08/21 Fix log sorting with date/time #1047
 26/08/21 Adoption self-checkout service #784
